--- a/9/2-twilio-server/package.json
+++ b/9/2-twilio-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gruppeprojekt",
+  "name": "2-twilio-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,9 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.3",
     "express": "~4.16.1",
-    "helmet": "^8.1.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "twilio": "^5.10.3"
   }
 }
